style: fix border visibility in light mode

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,7 +3,7 @@
 .footer {
     @include apple-glass;
     border-top: none;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    box-shadow: inset 0 1px 0 var(--color-border);
     min-height: var(--footer-height);
     display: flex;
     align-items: center;
