--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -8,7 +8,7 @@
     z-index: 1000;
     border-bottom: none;
     box-shadow:
-        inset 0 -1px 0 rgba(255, 255, 255, 0.1),
+        inset 0 -1px 0 var(--color-border),
         0 4px 30px rgba(0, 0, 0, 0.1);
 
     &__inner {
